# dataleon-hiring-candidate

./: .gitignore  .pre-commit-config.yaml  GESTION.md
backend/: .gitignore  README.md  REFERENCES.md  main.py  pyproject.toml
backend/src/: cli.py  table_detector.py
backend/tests/: test_baseline.py  test_cli.py  test_layout.py  test_transformed.py  utils.py
backend/tests/data/: .gitignore
backend/tests/data/baseline/: FATURA_Template1_Instance0_thick-edges-big.json  FATURA_Template1_Instance2_thick-edges-small.json  FATURA_Template1_Instance4_thick-edges-medium.json  FATURA_Template2_Instance0_clear-edges-medium.json  FATURA_Template2_Instance12_clear-edges-small.json  FATURA_Template2_Instance2_clear-edges-big.json  TableBank_%5BMS-OAPXBC%5D-170613_35_multiple-with-header.json
backend/tests/data/layout/: FATURA_Template10_Instance82_borderless-small.json  FATURA_Template10_Instance83_borderless-medium.json  FATURA_Template10_Instance84_borderless-big.json  FATURA_Template11_Instance129_borderless-with-header-small.json  FATURA_Template11_Instance130_borderless-with-header-medium.json  FATURA_Template11_Instance131_borderless-with-header-big.json  FATURA_Template12_Instance33_upper-table-small.json  FATURA_Template12_Instance34_upper-table-medium.json  FATURA_Template12_Instance35_upper-table-big.json  FATURA_Template13_Instance31_large-font-small.json  FATURA_Template13_Instance32_large-font-medium.json  FATURA_Template13_Instance33_large-font-big.json  FATURA_Template6_Instance0_titles-in-bold-big.json  FATURA_Template6_Instance2_titles-in-bold-small.json  FATURA_Template6_Instance5_titles-in-bold-medium.json  FATURA_Template7_Instance0_centered-text-big.json  FATURA_Template7_Instance3_centered-text-small.json  FATURA_Template7_Instance4_centered-text-medium.json  FATURA_Template9_Instance0_titles-in-green-medium.json  FATURA_Template9_Instance13_titles-in-green-big.json  FATURA_Template9_Instance14_titles-in-green-small.json  TableBank_wiczenia-2015-2016-f_5-6_multipage-table.json
backend/tests/data/transformed/: FATURA_Template24_Instance156_compressed.json  FATURA_Template24_Instance156_mirrored-vertical.json  FATURA_Template24_Instance156_rotated-180.json  FATURA_Template24_Instance156_rotated-5-left.json  FATURA_Template24_Instance156_rotated-5-right.json  (+2 more)
