[project]
name = "table-detector-backend"
version = "1.0.0"
description = "Little project to detect tables in images, as part of a hiring process for Dataleon."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "rich>=15.0.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
# Maximum allowed line length
line-length = 100

# Target Python version used for parsing and upgrades
target-version = "py312"

[tool.ruff.lint]
# Enable selected rule groups:
# E  = pycodestyle errors
# F  = pyflakes (unused imports, undefined names, etc.)
# I  = import sorting
# UP = pyupgrade (modern Python syntax)
# B  = flake8-bugbear (common pitfalls)
select = ["E", "F", "I", "UP", "B"]

# Rules to disable explicitly
ignore = []

[tool.ruff.format]
# Force double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Automatically detect line endings (LF / CRLF)
line-ending = "auto"
